--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,11 +1,10 @@
 //utils
 @import "./utils/variables";
-@import "./utils/visually-hidden";
 @import "./utils/mixins";
 
 //base
 @import "./base/common";
-@import "./base/container";
+@import "./base/visually-hidden";
 
 //components
 @import "./components/section-title";
