--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,4 @@
 @charset "UTF-8";
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
 *,
 *::before,
 *::after {
@@ -57,6 +45,18 @@ img {
 .what-we-are-doing .container {
   display: flex;
   flex-direction: column;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 .section-title {
@@ -178,9 +178,9 @@ img {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
-  text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  text-align: center;
   margin-bottom: 12px;
 }
 
@@ -251,7 +251,7 @@ img {
 }
 
 .modal-comment-input::placeholder {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.143;
@@ -508,10 +508,10 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.143;
-  text-align: center;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #FFFFFF;
+  text-align: center;
+  text-transform: uppercase;
   background: rgba(47, 48, 58, 0.8);
 }
 
@@ -645,11 +645,11 @@ img {
 .footer-address-link {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #FFFFFF;
+  font-style: normal;
   margin-bottom: 9px;
   display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -663,11 +663,11 @@ img {
 .footer-mail-tel-link {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
   margin-top: 0px;
   margin-bottom: 9px;
   display: inline-block;
@@ -686,8 +686,8 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #FFFFFF;
+  text-transform: uppercase;
   margin-bottom: 20px;
 }
 
@@ -737,6 +737,7 @@ img {
   border-radius: 4px;
   background-color: transparent;
   font-family: "Roboto", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
