--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,15 +1,3 @@
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
 *,
 *::before,
 *::after {
@@ -56,6 +44,18 @@ img {
 .what-we-are-doing .container {
   display: flex;
   flex-direction: column;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 .section-title {
@@ -282,8 +282,7 @@ img {
   height: 100%;
   padding: 63px 24px;
   font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
@@ -345,11 +344,11 @@ img {
 .footer-address-link {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #FFFFFF;
+  font-style: normal;
   margin-bottom: 9px;
   display: inline-block;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -363,11 +362,11 @@ img {
 .footer-mail-tel-link {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
   margin-top: 0px;
   margin-bottom: 9px;
   display: inline-block;
@@ -386,8 +385,8 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #FFFFFF;
+  text-transform: uppercase;
   margin-bottom: 20px;
 }
 
@@ -437,6 +436,7 @@ img {
   border-radius: 4px;
   background-color: transparent;
   font-family: "Roboto", sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
