--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -21,4 +21,31 @@ img {
     display: block;
 }
 
+.container {
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+
+    .header & {
+        display: flex;
+        align-items: center;
+    }
+    
+    .our-features & {
+        display: flex;
+    }
+    
+    .our-team &{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .what-we-are-doing &{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+
 
