--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -2,25 +2,25 @@
     &__list {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    &__list-item:not(:nth-last-child(-n+3)) {
+        margin-bottom: 30px
+    }
+    &__list-item:not(:nth-child(3n+3)) {
+        margin-right: 30px
+    }
     
-        &-item:not(:nth-last-child(-n+3)) {
-            margin-bottom: 30px
-        }
-        &-item:not(:nth-child(3n+3)) {
-            margin-right: 30px
-        }
-        
-        &-link {
-            display: block;
-            transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-            &:hover,
-            &:focus {
-                box-shadow: 
-                    0px 1px 1px rgba(0, 0, 0, 0.12), 
-                    0px 4px 4px rgba(0, 0, 0, 0.06), 
-                    1px 4px 6px rgba(0, 0, 0, 0.16);
-            }
+    &__list-link {
+        display: block;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            box-shadow: 
+            0px 1px 1px rgba(0, 0, 0, 0.12), 
+            0px 4px 4px rgba(0, 0, 0, 0.06), 
+            1px 4px 6px rgba(0, 0, 0, 0.16);
         }
     }
 
@@ -41,10 +41,10 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(100%);
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),transform 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-// 
-
+        transition: 
+            opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         .gallery__list-item:hover &,
         .gallery__list-item:focus & {
