--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,13 +15,8 @@
     }
 
     &-address-link {
-        font-family: $main-font;
-        font-weight: 400;
+        @include font ($main-font, 400, 14px, 1.71, 0.03em, $main-light-theme-color);
         font-style: normal;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        color: $main-light-theme-color;
         margin-bottom: 9px;
         display: inline-block;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -34,13 +29,8 @@
     }
 
     &-mail-tel-link{
-        font-family: $main-font;
-        font-weight: 400;
+        @include font ($main-font, 400, 14px, 1.71, 0.03em, rgba(255, 255, 255, 0.6));
         font-style: normal;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        color: rgba(255, 255, 255, 0.6);
         margin-top: 0px;
         margin-bottom: 9px;
         display: inline-block;
@@ -55,85 +45,74 @@
 
     &-subtitle {
         display: block;
-        font-family: $main-font;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
+        @include font ($main-font, 700, 14px, 1.14, 0.03em, $main-light-theme-color);
         text-transform: uppercase;
-        color: $main-light-theme-color;
         margin-bottom: 20px;
     }
 
-    &-social{
-        &-container{
-            width: 206px;
-            height: 132px;
-            margin-right: 93px;
-        }
+    &-social-container{
+        width: 206px;
+        height: 132px;
+        margin-right: 93px;
+    }
+
+    &-social-list{
+        display: flex;
+        justify-content: space-between;
+    }
     
-        &-list{
-            display: flex;
-            justify-content: space-between;
-        }
-        
-        &-link{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 44px;
-            height: 44px;
-            border-radius: 50%;
-            background-color:rgba(255, 255, 255, 0.1);
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-            &:hover,
-            &:focus {
-                background-color: $accent-color;
-                outline: none;
-            }
-        }
+    &-social-link{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color:rgba(255, 255, 255, 0.1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-        &-icon{
-            fill: $main-light-theme-color
+        &:hover,
+        &:focus {
+            background-color: $accent-color;
+            outline: none;
         }
+    }
+
+    &-social-icon{
+        fill: $main-light-theme-color
     }
 
     &-subscription-form{
         display: flex;
+    }
     
-        &-email{
-            width: 358px;
-            height: 50px;
-            padding: 15px;
-            margin-right: 12px;
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            box-sizing: border-box;
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-            border-radius: 4px;
+    &-subscription-form-email{
+        width: 358px;
+        height: 50px;
+        padding: 15px;
+        margin-right: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-sizing: border-box;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: transparent;
+        @include font ($main-font, 400, 16px, 1.25, 0.03em, rgba(255, 255, 255, 0.6));
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus{
+            outline: none;
+            border: 1px solid $accent-color;
             background-color: transparent;
-            font-family: $main-font;
-            font-size: 16px;
-            line-height: 1.25;
-            letter-spacing: 0.03em;
-            color: rgba(255, 255, 255, 0.6);
-            transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
+    &-subscription-form-button{
+        display: flex; 
+        align-items: center;
+    }
 
-            &:hover,
-            &:focus{
-                outline: none;
-                border: 1px solid $accent-color;
-                background-color: transparent;
-            }
-        }
-        &-button{
-            display: flex; 
-            align-items: center;
-        }
-
-        &-button-icon{
-            margin-left: 10px;
-        }
+    &-subscription-form-button-icon{
+        margin-left: 10px;
     }
 }
 
