--- a/sass/layout/_portfolio-filters.scss
+++ b/sass/layout/_portfolio-filters.scss
@@ -3,10 +3,10 @@
         display: flex;
         justify-content: center;
         margin-bottom: 50px;
+    }
 
-        &-item:not(:last-child){
-            margin-right: 8px;
-        }
+    &-list-item:not(:last-child){
+        margin-right: 8px;
     }
 
     &-button{
@@ -28,9 +28,9 @@
             color: $main-light-theme-color;
             background-color: $accent-color;
             box-shadow: 
-                0px 3px 1px rgba(0, 0, 0, 0.1), 
-                0px 1px 2px rgba(0, 0, 0, 0.08), 
-                0px 2px 2px rgba(0, 0, 0, 0.12);
+            0px 3px 1px rgba(0, 0, 0, 0.1), 
+            0px 1px 2px rgba(0, 0, 0, 0.08), 
+            0px 2px 2px rgba(0, 0, 0, 0.12);
         }
     }
 }
