--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,10 @@
 //utils
 @import "./utils/variables";
-@import "./utils/visually-hidden";
 @import "./utils/mixins";
 
 //base
 @import "./base/common";
-@import "./base/container";
+@import "./base/visually-hidden";
 
 //components
 @import "./components/section-title";
@@ -21,4 +20,3 @@
 @import "./layout/our-team";
 @import "./layout/our-clients";
 @import "./layout/footer";
-
